chore: add diff:warn script

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "tsx src/cli.ts",
     "diff:local": "tsx src/cli.ts diff --base examples/openapi-base.yaml --head examples/openapi-head.yaml --fail-on none",
     "diff:ci": "tsx src/cli.ts diff --base examples/openapi-base.yaml --head examples/openapi-head.yaml --fail-on breaking",
+    "diff:warn": "tsx src/cli.ts diff --base examples/openapi-base.yaml --head examples/openapi-head.yaml --fail-on warning",
     "build": "tsup",
     "typecheck": "tsc -p tsconfig.json --noEmit"
   },
