--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -17,20 +17,8 @@ jobs:
         working-directory: apps/web
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 22
-      - run: npm install
-      - run: npm run build
-      - run: |
-          rm -rf .next/standalone/.next/static
-          mkdir -p .next/standalone/.next
-          cp -R .next/static .next/standalone/.next/static
-          cp -R public .next/standalone/public
-          rm -rf node_modules
-          zip -qr deploy.zip .
       - uses: azure/webapps-deploy@v2
         with:
           app-name: truespecapp-web
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_WEB }}
-          package: apps/web/deploy.zip
+          package: apps/web
